# htmx_llamacpp_server

./: .cursorrules  CONTEXT_ALL.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
static/: ambrosia.css  normalize.min.css  open-props.css  style.css  theme.css
templates/: chat.html  chat.jinja  head.html  index.html  login.html  message.jinja
templates/chat/: message.jinja  message_edit.jinja
