[package]
name = "htmx_llamacpp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["form","cookie","cookie-private"] }
clap = { version = "4.5.8", features = ["derive"] }
rcgen = "0.12.1"
rustls = "0.20"
rustls-pemfile = "2.0.0"
reqwest = { version = "0.12.4", features = ["blocking","json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
axum-server = { version = "0.6.0", features = ["rustls", "tls-rustls"] }
