[package]
name = "htmx_llamacpp_server"
version = "0.1.3"
edition = "2021"
description = "A simple server for the htmx_llamacpp project"
license = "MIT" 

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["form","cookie","cookie-private"] }
clap = { version = "4.5.23", features = ["derive"] }
rcgen = "0.12.1"
reqwest = { version = "0.12.9", features = ["blocking","json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
